--- a/dashboard.html
+++ b/dashboard.html
@@ -529,6 +529,7 @@
                     adminMenuItemsContainer.innerHTML += `<a href="/accounts.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Cuentas Abiertas</a>`;
                     adminMenuItemsContainer.innerHTML += `<a href="/manage-products.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Gestionar Productos</a>`;
                     adminMenuItemsContainer.innerHTML += `<a href="/manage-expenses.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Registrar Gasto</a>`;
+                    // CORRECCIÓN: El reporte de ventas solo es para admin y cashier.
                     adminMenuItemsContainer.innerHTML += `<a href="/sales-report.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Reporte de Ventas</a>`;
                 }
     
