--- a/sales-report.html
+++ b/sales-report.html
@@ -20,7 +20,16 @@
 <body class="bg-gray-100">
     <script>
         const token = localStorage.getItem('cangre_burger_token');
-        if (!token) window.location.href = '/login.html';
+        if (!token) {
+            window.location.href = '/login.html';
+        } else {
+            // Decodificar el token para verificar el rol del usuario
+            const payload = JSON.parse(atob(token.split('.')[1]));
+            const userRole = payload.role;
+            if (userRole !== 'admin' && userRole !== 'cashier') {
+                window.location.href = '/dashboard'; // Redirigir al dashboard si no tiene permiso
+            }
+        }
     </script>
 
     <div class="container mx-auto p-4 md:p-8">
@@ -181,6 +190,12 @@
                 const response = await fetch(`/api/reports/sales?${query}`, {
                     headers: { 'Authorization': `Bearer ${token}` }
                 });
+
+                // Si el token expiró o es inválido, el servidor devolverá 401 o 403.
+                if (response.status === 401 || response.status === 403) {
+                    window.location.href = '/login.html'; // Redirigir al login
+                    return; // Detener la ejecución
+                }
                 if (!response.ok) {
                     // Si la respuesta no es OK, intentamos leer el mensaje de error del cuerpo de la respuesta.
                     const errorBody = await response.text(); // Usamos .text() por si el error no es un JSON válido.
